# NLFormer

./: ARCHITECTURE.md  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark.cpp
examples/: demo.cpp  medical_diagnosis.cpp  python_demo.py  rules.json
include/: attention.hpp  engine.hpp  matcher.hpp  optimizer.hpp  types.hpp
python/: CMakeLists.txt  python_bindings.cpp
src/: attention.cpp  engine.cpp  matcher.cpp  types.cpp
tests/: CMakeLists.txt  test_attention.cpp  test_engine.cpp  test_matcher.cpp  test_types.cpp
